--- a/css/styles.css
+++ b/css/styles.css
@@ -43,6 +43,10 @@ main{
     background-color: #223753;
 }
 
+main h2{
+    text-align: center;
+}
+
 .banner{
     background-image: url(../img/banner2.jpg);
     background-repeat: no-repeat;
@@ -179,7 +183,39 @@ main{
     align-items: center;
 }
 
-/*----MAIN NOSOTROS----*/
+/** -----  SERVICIOS -----*/
+
+.services{
+    height: 100vh;
+    display: grid;
+    grid-template-rows: repeat(1, 1fr);
+    grid-template-columns: 450px 450px 450px;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.services h2{
+    text-align: center;
+}
+
+.services div{
+    padding: 15px;
+    text-align: center;
+    justify-content: center;
+}
+
+.services div img{
+    height: 400px;
+    width: 400px;
+}
+
+.services div p{
+    padding: 10px;
+    margin: 0;
+}
+
+
+/**---- NOSOTROS----*/
 
 .nosotros{
     display: flex;
@@ -222,6 +258,51 @@ main{
     justify-content: center;
     align-items: center;
     width: 100%;
+}
+
+
+/*----contactanos----*/
+
+.formulario{
+    background: rgb(56,91,138);
+    background: linear-gradient(41deg, rgba(56,91,138,1) 0%, rgba(37,120,136,0) 50%, rgba(56,91,138,1) 100%);
+    height: 100vh;
+}
+
+.formulario form h2{
+    justify-content: center;
+    text-align: center;
+}
+
+.formulario form{
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+}
+
+
+.formulario form input{
+    font-size: 1.5rem;
+    width: 70%;
+    background-color: transparent;
+    border: none;
+    border-bottom: 1px solid #2b2b2b;
+}
+
+.formulario form textarea{
+    font-size: 1.5rem;
+    width: 70%;
+    background-color: transparent;
+    border: none;
+    border-bottom: 1px solid #474747;
+}
+
+#enviar{
+    border: none;
+    border-radius: 2px;
+    background-color: orange;
 }
 
 /*----footer-----*/
@@ -268,6 +349,20 @@ footer p{
     }
 }
 
+@media screen and (max-width:1350px){
+    .services{
+        height: 100%;
+        grid-template-rows: repeat(1, 1fr);
+        grid-template-columns: 450px 450px;
+        justify-content: space-evenly;
+        align-items: center;
+    }
+    .services div img{
+        height: 320px;
+        width: 320px;
+    }
+}
+
 @media screen and (max-width:1220px){
     .nosotros-contenedor2{
         display: flex;
@@ -286,6 +381,16 @@ footer p{
     .productos-index{
         grid-template-rows: repeat(1, 1fr);
         grid-template-columns: 500px;
+        justify-content: space-evenly;
+        align-items: center;
+    }
+}
+
+@media screen and (max-width:900px){
+    .services{
+        height: 100%;
+        grid-template-rows: repeat(1, 1fr);
+        grid-template-columns: 350px;
         justify-content: space-evenly;
         align-items: center;
     }
