--- a/css/styles.css
+++ b/css/styles.css
@@ -20,20 +20,20 @@ header nav div a img{
     height: 100px;  
 }
 
-/*header nav ul{
+header nav ul{
     list-style: none;
     display: flex;
-}*/
+}
 
 header nav ul li{
     margin: 30px;
 }
 
-header nav ul li a{
+/*header nav ul li a{
     text-decoration: none;
-    font-size: 20px;
+    /*font-size: 25px;
     color: white;
-}
+}*/
 
 
 /*----- main -----*/
@@ -133,9 +133,9 @@ main h2{
     box-shadow: 0px 0px 50px -20px rgba(56,91,138,0.86);
 }
 
-.card-productos:hover{
+/*.card-productos:hover{
     padding: 17px;
-}
+}*/
 
 .card-productos img{
     margin: 40px;
@@ -194,9 +194,6 @@ main h2{
     align-items: center;
 }
 
-.services h2{
-    text-align: center;
-}
 
 .services div{
     padding: 15px;
