--- a/css/estilos.css
+++ b/css/estilos.css
@@ -207,92 +207,86 @@ footer {
     height: 50px; }
 
 @media screen and (max-width: 1650px) {
-  .productos2 {
+  main .productos2 {
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: auto; } }
 
 @media screen and (max-width: 1500px) {
-  .productos-index {
+  main .productos-index {
     grid-template-rows: repeat(2, 1fr);
     grid-template-columns: 500px 500px;
     justify-content: space-evenly;
     align-items: center; } }
 
 @media screen and (max-width: 1350px) {
-  .services {
+  main .services {
     height: 100%;
     grid-template-rows: repeat(1, 1fr);
     grid-template-columns: 450px 450px;
     justify-content: space-evenly;
     align-items: center; }
-  .services div img {
-    height: 320px;
-    width: 320px; } }
+    main .services div img {
+      height: 320px;
+      width: 320px; } }
 
 @media screen and (max-width: 1220px) {
-  .nosotros-contenedor2 {
+  main .nosotros .nosotros-contenedor2 {
     display: flex;
     flex-direction: column; } }
 
 @media screen and (max-width: 1080px) {
-  .productos2 {
+  main .productos2 {
     grid-template-columns: repeat(1, 1fr);
     grid-template-rows: auto; } }
 
 @media screen and (max-width: 1020px) {
-  .productos-index {
+  main .productos-index {
     grid-template-rows: repeat(1, 1fr);
     grid-template-columns: 500px;
     justify-content: space-evenly;
     align-items: center; } }
 
 @media screen and (max-width: 900px) {
-  .services {
+  main .services {
     height: 100%;
     grid-template-rows: repeat(1, 1fr);
     grid-template-columns: 350px;
     justify-content: space-evenly;
     align-items: center; } }
 
-@media screen and (max-width: 770px) {
-  header {
-    background-color: #385B8A;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: none; }
-  header nav ul {
-    list-style: none;
-    display: flex;
-    flex-direction: column; } }
-
 @media screen and (max-width: 650px) {
-  .nosotros-contenedor2 div iframe, img {
+  main .nosotros-contenedor2 div img {
+    width: 90%;
+    height: 100%; }
+  main .nosotros-contenedor2 div iframe {
     width: 90%;
     height: 100%; } }
 
 @media screen and (max-width: 520px) {
-  .banner {
+  main .banner {
     height: 700px; }
-  .productos-index {
+    main .banner h1 {
+      font-size: 60px; }
+    main .banner p {
+      font-size: 15px; }
+    main .banner a {
+      font-size: 10px; }
+  main .productos-index {
     grid-template-rows: repeat(1, 1fr);
     grid-template-columns: 340px;
     justify-content: space-evenly;
     align-items: center; }
-  .productos2 {
+    main .productos-index .card-productos img {
+      height: 300px;
+      width: 300px; }
+  main .productos2 {
     grid-template-rows: repeat(1, 1fr);
     grid-template-columns: 340px;
     justify-content: space-evenly;
     align-items: center; }
-  .card-productos img {
-    height: 300px;
-    width: 300px; }
-  .banner h1 {
-    font-size: 60px; }
-  .banner p {
-    font-size: 15px; }
-  .banner a {
-    font-size: 10px; }
-  .logosredes {
+    main .productos2 .card-productos img {
+      height: 300px;
+      width: 300px; }
+  footer .logosredes {
     display: flex;
     flex-direction: column; } }
