--- a/scss/components/_main.scss
+++ b/scss/components/_main.scss
@@ -35,8 +35,9 @@ main{
             text-decoration: none;
             color: white;
             &:hover{
-                font-size: 20px;
-                padding: 13px;
+                transition-property: padding;
+                transition-duration: 0.5s;
+                padding: 1rem;
             }
         }
     }
